fix: the farm world swap looked for the staged world one folder too deep